option('gtk_doc', type: 'boolean',
       value: true,
       description: 'Enable generating the API reference (depends on GTK-Doc)')
option('introspection', type: 'boolean',
       value: true,
       description: 'Enable GObject Introspection (depends on GObject)')
option('man', type: 'boolean',
       value: true,
       description: 'Generate man pages for installed tools (depends on xsltproc)')
